[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/CardDiscoveryPopup.gd" id="1_disc_script"]

[node name="CardDiscoveryPopup" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_disc_script")

[node name="Dimmer" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.8)

[node name="Center" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="PanelContainer" parent="Center"]
custom_minimum_size = Vector2(400, 500)
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="Center/Panel"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Title" type="Label" parent="Center/Panel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "NEW CARD FOUND!"
horizontal_alignment = 1

[node name="CardFrame" type="ColorRect" parent="Center/Panel/VBox"]
custom_minimum_size = Vector2(200, 280)
layout_mode = 2
size_flags_horizontal = 4
color = Color(0.15, 0.15, 0.2, 1)

[node name="CardName" type="Label" parent="Center/Panel/VBox/CardFrame"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 20.0
grow_horizontal = 2
text = "Blade of Memory"
horizontal_alignment = 1

[node name="CardDesc" type="Label" parent="Center/Panel/VBox/CardFrame"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
offset_bottom = -20.0
grow_horizontal = 2
text = "Deals 15 damage."
horizontal_alignment = 1
autowrap_mode = 3

[node name="ClaimButton" type="Button" parent="Center/Panel/VBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
size_flags_horizontal = 4
text = "CLAIM"